--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
     <div class="main__container">
       <div class="main__content">
         <h1>FIRST JS FRAMEWORK FROM KZ</h1>
-        <h2>build && developed by Ermukhammed and Ernur</h2>
+        <h2>build && developed by Ermukhammed and Yernur</h2>
         <p>Bilim.JS</p>
         <button class="main__btn"><a href="https://t.me/bilimjs">Кеттiк</a></button>
       </div>
